2008-11-24  Wakaba  <wakaba@suika.fam.cx>

	* AtomElement.pm (add_new_entry): Insert a new entry BEFORE any
	existing entry for consistency with existing practice.

2007-10-08  Wakaba  <wakaba@suika.fam.cx>

	* AtomElement.pm (get_entry_element_by_id): Support
	for |create-child-element| option.

2007-07-15  Wakaba  <wakaba@suika.fam.cx>

	* AtomElement.pm: Wrong module was loaded.
	(AUTOLOAD): No warnings!  Some argument index were incorrect.
	Some variables were not referenced correctly.
	(AtomDateConstruct): Package name was incorrect.

2007-07-15  Wakaba  <wakaba@suika.fam.cx>

	* AtomElement.pm: New module.

2007-07-15  Wakaba  <wakaba@suika.fam.cx>

	* ChangeLog: New file.

