@@ -1,5 +1,9 @@
 2008-11-24  Wakaba  <wakaba@suika.fam.cx>
 
+	* AtomElement.pm (add_new_entry): Fixed a typo.
+
+2008-11-24  Wakaba  <wakaba@suika.fam.cx>
+
 	* AtomElement.pm (add_new_entry): Insert a new entry BEFORE any
 	existing entry for consistency with existing practice.
 
